Añadido elementos de prueba a la base de datos. Botón modificar ya funciona